--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do List</title>
 </head>
+
 <body>
+    <div class="container1">
+        <h1 class="test">To Do List</h1>
+        <button>Create Project</button>
+        <button>Create To DO</button>
+        <button>Create Notes</button>
+    </div>
+    <div class="container2">
+        <div>
+            <h2>Projects</h2>
+            <div>This Belongs to Project</div>
+        </div>
+        <div>
+            <h2>To Do</h2>
+            <div>This belongs to To Do </div>
+        </div>
+        <div>
+            <h2>Notes</h2>
+            <div>This belongs to Notes</div>
+        </div>
+    </div>
+
 </body>
+
 </html>
